# achievements-api

./: .env  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py  seed_demo_data.py
app/api/: deps.py
app/api/v1/: achievements.py  stats.py  users.py
app/api/v_first/: stats.py
app/core/: config.py  db.py  logging.py
app/data/: achievements.json
app/db/: base.py
app/models/: __init__.py  achievement.py  achievement_translation.py  enums.py  user.py  user_achievement.py  user_daily_stat.py
app/schemas/: achievements.py  stats.py  users.py
app/services/: achievements.py  stats.py  users.py
etc/migrations/: env.py
etc/migrations/versions/: 6713a16c5297_create_core_tables.py  c63225e3ea6b_create_core_tables.py
nginx/: nginx.conf
tests/: conftest.py  test_achievements.py  test_stats.py  test_users.py
